feat: main structure with styles and javascripts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <link rel="stylesheet" href="css/dracula.css">
+  <link rel="stylesheet" href="css/style.css">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -24,9 +27,19 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
+  <main class="">
+    <div class="card">
+      <div class="title">ZIP</div>
+      <pre>compress <code class="bash">zip -r archive.zip folder</code></pre>
+      <pre>extract <code class="bash">unzip archive.zip</code></pre>
+    </div>
+  </main>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
