--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+  <script>window.hljs || document.write('<script src="js/vendor/highlight-9.15.6.min.js"><\/script>')</script>
 
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
