--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 
   <!-- Add your site or application content here -->
 
+
+  <header>
+    <noscript><div style="background-color: red">Your browser doesn't support <strong>javascript</strong>.</div></noscript>
+    <div class="container">
+
+      <span class="box title">Useful snippets for bash</span>
+
+      <input class="box" id="filter" placeholder="filter by code, title or tag" />
+
+    </div>
+  </header>
+
   <main class="">
     <div class="card">
       <div class="title">GZ - single file</div>
