feat: new TIME card

--- a/index.html
+++ b/index.html
@@ -84,14 +84,25 @@
       <pre>backup<code class="bash">mysqldump -u root -p[password] [db_name] > dump.sql</code></pre>
       <pre>restore<code class="bash">mysql -u root -p[password] [db_name] < dump.sql</code></pre>
     </div>
-<!--
 
     <div class="card">
-      <div class="title">MYSQL</div>
-      <pre> <code class="bash"> </code></pre>
-      <pre> <code class="bash"> </code></pre>
+      <span class="title">TIME</span>
+      <span class="container-label">
+        <span class="label">util</span>
+      </span>
+      <pre>time<code class="bash">`date +"%Y%m%d%H%M%S"`</code></pre>
+      <pre>Unix time<code class="bash">`date +"%s"`</code></pre>
     </div>
--->
+
+
+    <!--
+
+        <div class="card">
+          <div class="title">MYSQL</div>
+          <pre> <code class="bash"> </code></pre>
+          <pre> <code class="bash"> </code></pre>
+        </div>
+    -->
 
 
 
